syntax = "proto3";
package grpc;
option go_package = "github.com/CentrifugeInc/go-centrifuge/centrifuge/invoice/grpc";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "protoc-gen-swagger/options/annotations.proto";
import "centrifuge-protobufs/invoice/invoice.proto";

option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
    host: "localhost:8082";
    info: {
        title:"Centrifuge OS Client API";
        version:"0.0.1";
        contact:{
            name:"Centrifuge";
            url:"https://github.com/CentrifugeInc";
            email:"hello@centrifuge.one";
        };
    };
    schemes:HTTPS;
    consumes:"application/json";
    produces:"application/json";
};

service InvoiceDocumentService {
    rpc SendInvoiceDocument(SendInvoiceEnvelope) returns (InvoiceDocument) {
        option (google.api.http) = {
            post: "/invoice/send"
            body: "*"
        };
    }
    rpc GetInvoiceDocument(GetInvoiceDocumentEnvelope) returns (InvoiceDocument) {
        option (google.api.http) = {
            get: "/invoice/get/{document_identifier}"
        };
    }

        rpc GetReceivedInvoiceDocuments (google.protobuf.Empty) returns (ReceivedInvoices) {
        option (google.api.http) = {
            get: "/invoice/getReceived"
        };
    }
}



message SendInvoiceEnvelope {
    // Centrifuge OS Entity of the recipient
    repeated bytes recipients = 1;
    InvoiceDocument document = 10;
}

message GetInvoiceDocumentEnvelope {
    bytes document_identifier = 1;
}

message ReceivedInvoices {
    repeated InvoiceDocument invoices = 1;
}
